common-services/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
    name: grafana
  name: grafana
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
  sessionAffinity: None
  type: NodePort
