common-services/grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: eye-ingress
spec:
  tls:
    - hosts:
        - eye.osinfra.cn
      secretName: grafana-tls
  rules:
    - host: eye.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: grafana-service
              servicePort: 80
            path: /
